# bash_setup

./: .gitignore  .pre-commit-config.yaml  LICENSE  mypy.ini  pyproject.toml  setup_python_env.sh
LICENSES/: MIT.txt
