# SPDX-FileCopyrightText: 2023 Michael Søegaard <https://soegaard.ai>
# SPDX-License-Identifier: MIT

[tool.poetry]
name = "bash_setup"
version = "0.1.0"
description = ""
authors = ["Michael Søegaard <michael@soegaard.ai>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
reorder-python-imports = "^3.9.0"
mypy = ">=0.982"
pylint-pydantic = "^0.1.4"
pylint = "^2.15.5"

[tool.poetry.group.dev.dependencies]
pytest-split = "^0.8.0"
pytest-cov = "^4.0.0"
pre-commit = "^3.0.1"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode="auto"

[tool.mypy]
python_version = "3.10"
warn_return_any = "True"
warn_unused_configs = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"

[tool.flake8]
max-line-length = 88
exclude = [
".git", "__pycache__", ".mypy_cache", ".pytest_cache", ".venv", ".gitlab"
]
